<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.skichrome.oc.easyvgp.viewmodel.NewVgpSetupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/form_layout_margin_horizontal">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_do_not_hide_fab">

                <TextView
                    android:id="@+id/fragmentNewVgpSetupTitle"
                    style="@style/EasyVGPTheme.tvTitleStyle"
                    android:text="@string/fragment_new_vgp_setup_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentNewVgpSetupReportDateLayout"
                    style="@style/EasyVGPTheme.editTextInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_marginEnd="@dimen/tv_input_margin"
                    app:hint_and_asterisk="@{@string/fragment_new_vgp_setup_report_date}"
                    tools:hint="@string/fragment_new_vgp_setup_report_date"
                    app:layout_constraintEnd_toStartOf="@+id/fragmentNewVgpSetupReportDateSetBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentNewVgpSetupReportDate"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:focusable="false"
                        android:inputType="date" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/fragmentNewVgpSetupReportDateSetBtn"
                    style="@style/EasyVGPTheme.buttonStyle"
                    android:text="@string/fragment_new_vgp_setup_report_date_btn"
                    app:layout_constraintBottom_toBottomOf="@+id/fragmentNewVgpSetupReportDateLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/fragmentNewVgpSetupReportDateLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentNewVgpSetupMachineHoursLayout"
                    style="@style/EasyVGPTheme.editTextInputLayoutStyle"
                    android:layout_width="0dp"
                    app:hint_and_asterisk="@{@string/fragment_new_vgp_setup_machine_hours}"
                    tools:hint="@string/fragment_new_vgp_setup_machine_hours"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupReportDateLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentNewVgpSetupMachineHours"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:inputType="number"
                        android:text="@{viewModel.machineWithControlPointsDataExtras.machineHours != 0 ? String.valueOf(viewModel.machineWithControlPointsDataExtras.machineHours) : null}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentNewVgpSetupMachineInterventionPlaceLayout"
                    style="@style/EasyVGPTheme.editTextInputLayoutStyle"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:hint_and_asterisk="@{@string/fragment_new_vgp_setup_machine_intervention_place}"
                    tools:hint="@string/fragment_new_vgp_setup_machine_intervention_place"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupMachineHoursLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentNewVgpSetupInterventionPlace"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:text="@{viewModel.machineWithControlPointsDataExtras.interventionPlace}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragmentNewVgpSetupIsMachineClean"
                    style="@style/EasyVGPTheme.switch"
                    android:checked="@{viewModel.machineWithControlPointsDataExtras.machineClean}"
                    android:text="@string/fragment_new_vgp_setup_sw_machine_clean"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupMachineInterventionPlaceLayout" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragmentNewVgpSetupIsMachineMarkedCE"
                    style="@style/EasyVGPTheme.switch"
                    android:checked="@{viewModel.machineWithControlPointsDataExtras.machineCE}"
                    android:text="@string/fragment_new_vgp_setup_sw_machine_ce"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupIsMachineClean" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragmentNewVgpSetupIsMachineNoticeAvailable"
                    style="@style/EasyVGPTheme.switch"
                    android:checked="@{viewModel.machineWithControlPointsDataExtras.machineNotice}"
                    android:text="@string/fragment_new_vgp_setup_sw_machine_manual"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupIsMachineMarkedCE" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragmentNewVgpSetupIsMachineLiftingEquiped"
                    style="@style/EasyVGPTheme.switch"
                    android:checked="@{viewModel.machineWithControlPointsDataExtras.liftingEquip}"
                    android:text="@string/fragment_new_vgp_setup_sw_machine_lifting"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupIsMachineNoticeAvailable" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragmentNewVgpSetupIsMachineControlWithLoad"
                    style="@style/EasyVGPTheme.switch"
                    android:checked="@{viewModel.machineWithControlPointsDataExtras.testsWithLoad}"
                    android:text="@string/fragment_new_vgp_setup_sw_machine_control_with_load"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupIsMachineLiftingEquiped" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragmentNewVgpSetupIsMachineControlWithNominalLoad"
                    style="@style/EasyVGPTheme.switch"
                    android:checked="@{viewModel.machineWithControlPointsDataExtras.testsWithNominalLoad}"
                    android:text="@string/fragment_new_vgp_setup_sw_machine_control_with_nominal_load"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupIsMachineControlWithLoad" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/fragmentNewVgpSetupIsMachineControlTriggeredSensors"
                    style="@style/EasyVGPTheme.switch"
                    android:checked="@{viewModel.machineWithControlPointsDataExtras.testsHasTriggeredSensors}"
                    android:text="@string/fragment_new_vgp_setup_sw_machine_control_triggered_sensors"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupIsMachineControlWithNominalLoad" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentNewVgpSetupMachineControlLoadTypeLayout"
                    style="@style/EasyVGPTheme.editTextInputLayoutStyle"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupIsMachineControlTriggeredSensors">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentNewVgpSetupControlLoadType"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:hint="@string/fragment_new_vgp_setup_machine_load_type"
                        android:text="@{viewModel.machineWithControlPointsDataExtras.loadType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentNewVgpSetupMachineControlLoadValueLayout"
                    style="@style/EasyVGPTheme.editTextInputLayoutStyle"
                    android:layout_width="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupMachineControlLoadTypeLayout"
                    app:suffixText="@string/fragment_new_vgp_setup_machine_load_value_unit">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentNewVgpSetupControlLoadValue"
                        style="@style/EasyVGPTheme.editTextInputStyle"
                        android:hint="@string/fragment_new_vgp_setup_machine_load_value"
                        android:inputType="number"
                        android:text="@{viewModel.machineWithControlPointsDataExtras.loadMass != 0 ? String.valueOf(viewModel.machineWithControlPointsDataExtras.loadMass) : null}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/fragmentNewVgpSetupMachineControlTypeTitle"
                    style="@style/EasyVGPTheme.tvTitleStyle"
                    android:text="@string/fragment_new_vgp_setup_control_type_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragmentNewVgpSetupMachineControlLoadValueLayout" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/fragmentNewVgpSetupMachineControlType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tv_input_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragmentNewVgpSetupMachineControlTypeTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragmentNewVgpSetupFab"
            style="@style/EasyVGPTheme.fabStyle"
            android:src="@drawable/ic_arrow_forward_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>